# exodus

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tests.json
app/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/[locale]/: layout.tsx
app/src/components/common/: AmountInput.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  StatusBadge.tsx  (+1 more)
app/src/hooks/: useConversionRate.ts  useExodus.ts  useKYCStatus.ts  useTier.ts  useUserPosition.ts  useYieldData.ts
app/src/i18n/: config.ts  en.json  ja.json
app/src/lib/: constants.ts  exodus-client.ts  format.ts
app/src/providers/: ExodusProvider.tsx  I18nProvider.tsx  WalletProvider.tsx
crates/exodus-types/: Cargo.toml
crates/exodus-types/src/: deposit.rs  lib.rs  tier.rs  yield_source.rs
docs/: feasibility-assessment.md  stablebonds-analysis.md
programs/exodus-core/: Cargo.toml
programs/exodus-core/src/: errors.rs  events.rs  lib.rs
programs/exodus-core/src/instructions/: admin.rs  claim_yield.rs  deposit_jpy.rs  deposit_usdc.rs  execute_conversion.rs  initialize_protocol.rs  mod.rs  register_yield_source.rs  update_nav.rs  withdraw.rs
programs/exodus-core/src/state/: conversion_record.rs  mod.rs  pending_deposit.rs  protocol_config.rs  user_position.rs  yield_source.rs
programs/exodus-tbill-vault/: Cargo.toml
programs/exodus-tbill-vault/src/: errors.rs  lib.rs  state.rs
scripts/: test.sh
tests/: exodus-core.ts  exodus-tbill-vault.ts
tests/helpers/: setup.ts
(+31 files in other folders)
