[package]
name = "exodus-core"
version = "0.1.0"
edition = "2021"
description = "EXODUS Core Protocol — JPY→USDC conversion + yield allocation"

[lib]
crate-type = ["cdylib", "lib"]
name = "exodus_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
exodus-types = { path = "../../crates/exodus-types" }
exodus-tbill-vault = { path = "../exodus-tbill-vault", features = ["cpi"] }
